workspaces/backstage/e2e-tests/tests/config/kubernetes/resources/topology-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topology-test
  labels:
    app.kubernetes.io/instance: topology-test
    app.kubernetes.io/name: topology-test
    backstage.io/kubernetes-id: developer-hub
  annotations:
    app.openshift.io/vcs-uri: "https://github.com/redhat-developer/rhdh"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: topology-test
  template:
    metadata:
      labels:
        app: topology-test
        backstage.io/kubernetes-id: developer-hub
    spec:
      containers:
        - name: topology
          image: nginxinc/nginx-unprivileged:stable-alpine
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: topology-test-service
  labels:
    app: topology-test
    backstage.io/kubernetes-id: developer-hub
spec:
  selector:
    app: topology-test
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
